--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -16,6 +16,7 @@
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.9.0",
     "jwt-decode": "^4.0.0",
+    "qs": "^6.14.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0"
@@ -24,6 +25,7 @@
     "@eslint/js": "^9.25.0",
     "@types/axios": "^0.9.36",
     "@types/jwt-decode": "^2.2.1",
+    "@types/qs": "^6.14.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
