--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -19,6 +19,7 @@
     "qs": "^6.14.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-range": "^1.10.0",
     "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
